<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_size"
    tools:context=".IoTActivity">

    <ImageView
        android:id="@+id/cat_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cat_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/fan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fan_Off"
        android:layout_marginTop="@dimen/normal_size"
        android:onClick="control_handler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_image"
        />

    <Button
        android:id="@+id/led_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Led_Off"
        android:onClick="control_handler"
        app:layout_constraintBaseline_toBaselineOf="@id/fan_button"
        app:layout_constraintLeft_toRightOf="@id/fan_button"
        app:layout_constraintRight_toLeftOf="@id/pump_button" />

    <Button
        android:id="@+id/pump_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pump_Off"
        android:onClick="control_handler"
        app:layout_constraintBaseline_toBaselineOf="@id/fan_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:id="@+id/header_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_size"
        app:layout_constraintTop_toBottomOf="@id/fan_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:weightSum="10"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:text="@string/Header_Date"
                android:textStyle="bold"
                android:layout_weight="7.9"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:text="@string/Header_Food"
                android:textStyle="bold"
                android:layout_weight="0.7"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:text="@string/Header_Temperature"
                android:textStyle="bold"
                android:layout_weight="0.7"
                android:padding="3dip"
                android:gravity="center"
                />

            <TextView
                android:text="@string/Header_Water"
                android:textStyle="bold"
                android:layout_weight="0.7"
                android:padding="3dip"
                android:gravity="center"
                />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_table"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TableLayout
            android:id="@+id/iot_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

        </TableLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>